--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
     </section>
 
     <section class="main-content">
-      <p><img src="https://lh3.googleusercontent.com/-nJaTV7koVxQ/VjYo3hNTcrI/AAAAAAAATDI/-ntYRoeMF0Y3U2bLxZE9JN-qnyfcOinKgCL0B/s364/361d75d.jpg" alt="omiros"></p>
+      <hr>
+
+<p><img src="https://lh3.googleusercontent.com/-nJaTV7koVxQ/VjYo3hNTcrI/AAAAAAAATDI/-ntYRoeMF0Y3U2bLxZE9JN-qnyfcOinKgCL0B/s364/361d75d.jpg" alt="omiros"></p>
+
+<hr>
+
+<ul>
+<li>I hold Electrical and Computer Engineering degree with major in Computer Science from National Technical University of Athens </li>
+<li>I am fascinated by Machine Learning and Artificial Intelligence</li>
+<li>I like Traveling and Snowboarding</li>
+</ul>
 
       <footer class="site-footer">
 
