Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="main-content">
       <hr>
 
-<p><img src="https://lh3.googleusercontent.com/-nJaTV7koVxQ/VjYo3hNTcrI/AAAAAAAATDI/-ntYRoeMF0Y3U2bLxZE9JN-qnyfcOinKgCL0B/s364/361d75d.jpg" alt="omiros"></p>
+<p><img src="omipan.github.io/images/om_circular.jpeg" alt="omiros"></p>
 
 <hr>
 
