--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>omipan by omipan</title>
+    <p><img src="omipan.github.io/images/om_circular.jpeg" alt="omiros"></p>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -18,7 +19,7 @@
     <section class="main-content">
       <hr>
 
-<p><img src="https://lh3.googleusercontent.com/-nJaTV7koVxQ/VjYo3hNTcrI/AAAAAAAATDI/-ntYRoeMF0Y3U2bLxZE9JN-qnyfcOinKgCL0B/s364/361d75d.jpg" alt="omiros"></p>
+
 
 <hr>
 
