changed personal image position

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>omipan by omipan</title>
-    <p><img src="omipan.github.io/images/om_circular.jpeg" alt="omiros"></p>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -13,17 +13,13 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">omipan</h1>
+      <p><img src="omipan.github.io/images/om_circular.jpeg" style="width:128px;height:128px;  margin: 0 auto;" alt="omiros"></p>
       <h2 class="project-tagline">ECE Grad @ NTUA, Athens</h2>
     </section>
 
     <section class="main-content">
       <hr>
 
-<<<<<<< HEAD
-
-=======
-<p><img src="omipan.github.io/images/om_circular.jpeg" alt="omiros"></p>
->>>>>>> 37013718235ca6433a3cf8b95e9158c76d0f6986
 
 <hr>
 
