--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li>I am fascinated by Machine Learning and Artificial Intelligence</li>
         <li>I like Traveling and Snowboarding</li>
      <br><br>
-     <a href="http://example.com/files/myfile.pdf" target="_blank">Download my CV</a>
+     <a href="omipan.github.io/cv/opCV.pdf" target="_blank">Download my CV</a>
       </ul>
 
 
