--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2 class="project-tagline">ECE Grad @ NTUA, Athens</h2>
     </section>
 
-    <section class="main-content" align=center>
+    <section class="main-content">
         
       <ul>
         <li><b>Holds</b> Electrical & Computer Engineering diploma with major in Computer Science from National Technical University of Athens </li>
