--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>omipan by omipan</title>
     
-    <meta name="viewport" content="width=device-width, initial-scale=0.7">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
@@ -20,10 +20,10 @@
     <section class="main-content">
         
       <ul>
-        <li><b>Holds</b> Electrical & Computer Engineering diploma with major in Computer Science from National Technical University of Athens </li>
-        <li><b>Fascinated</b> by Machine Learning & Artificial Intelligence</li>
-        <li><b>Plays</b> Water Polo</li>
-        <li><b>Likes</b> Traveling & Snowboarding</li>
+        <li><b><i>Holds</i></b> Electrical & Computer Engineering diploma with major in Computer Science from National Technical University of Athens </li>
+        <li><b><i>Fascinated</i></b> by Machine Learning & Artificial Intelligence</li>
+        <li><b><i>Plays</i></b> Water Polo</li>
+        <li><b><i>Likes</i></b> Traveling & Snowboarding</li>
       </ul>
 
 
