--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <footer class="site-footer">
         <div align=center >
         <a href="omipan.github.io/cv/opCV.pdf" target="_blank">Download my CV</a> <br>
-        <a href="https://github.com/omipan" > <img src="omipan.github.io/images/git_sketch.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Github" /></a>
+        <a href="https://github.com/omipan" > <img src="omipan.github.io/images/git_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Github" /></a>
         <a href="https://twitter.com/omirpan" > <img src="omipan.github.io/images/twitter_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Twitter" /></a>
         <a href="https://gr.linkedin.com/in/opantazis" > <img src="omipan.github.io/images/linkedin_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Linkedin" /></a>
         <a href="mailto:o.pantazis@gmail.com" > <img src="omipan.github.io/images/gmail_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Gmail" /></a> <br>
