--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="page-header">
       <h1 class="project-name">omipan</h1>
       <p><img src="omipan.github.io/images/om_circular.jpeg" style="width:164px;height:128px;  margin: 0 auto;" alt="omiros"></p>
-      <h2 class="project-tagline">ECE Grad @ NTUA, Athens</h2>
+      <h2 class="project-tagline">ECE Grad @ NTUA</h2>
     </section>
 
     <section class="main-content">
@@ -29,7 +29,7 @@
 
       <footer class="site-footer">
         <div align=center >
-        <a href="omipan.github.io/cv/opCV.pdf" target="_blank">Download my CV</a> <br>
+        <a href="omipan.github.io/cv/opCV.pdf" target="_blank">Download my CV</a> <br><br>
         <a href="https://github.com/omipan" > <img src="omipan.github.io/images/git_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Github" /></a>
         <a href="https://twitter.com/omirpan" > <img src="omipan.github.io/images/twitter_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Twitter" /></a>
         <a href="https://gr.linkedin.com/in/opantazis" > <img src="omipan.github.io/images/linkedin_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Linkedin" /></a> <br>
