--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="https://github.com/omipan" > <img src="omipan.github.io/images/git_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Github" /></a>
         <a href="https://twitter.com/omirpan" > <img src="omipan.github.io/images/twitter_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Twitter" /></a>
         <a href="https://gr.linkedin.com/in/opantazis" > <img src="omipan.github.io/images/linkedin_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Linkedin" /></a> <br>
-        <p> <img src="omipan.github.io/images/gmail_icon.png" style="float:left;width:32px;height:32px; display: block; margin-left: 150px;">  
+        <p> <img src="omipan.github.io/images/gmail_icon.png" style="float:left;width:50px;height:50px; display: block;">  
             <a><b>o.pantazis@gmail.com </b></a> 
         </p><br><br>
         
