--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name" style="font-family:Garamont;">omipan</h1>
+      <h1 class="project-name">Omiros Pantazis</h1>
       <p><img src="omipan.github.io/images/om_circular.jpeg" style="width:164px;height:128px;  margin: 0 auto;" alt="omiros"></p>
       <h2 class="project-tagline">ECE Grad @ NTUA</h2>
     </section>
