--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <footer class="site-footer">
         <div align=center >
-        <a href="omipan.github.io/cv/opCV.pdf" target="_blank">Download my CV</a> <br><br>
+        <a href="omipan.github.io/cv/opCV.pdf" target="_blank"><b>Download my CV</b></a> <br><br>
         <a href="https://github.com/omipan" > <img src="omipan.github.io/images/git_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Github" /></a>
         <a href="https://twitter.com/omirpan" > <img src="omipan.github.io/images/twitter_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Twitter" /></a>
         <a href="https://gr.linkedin.com/in/opantazis" > <img src="omipan.github.io/images/linkedin_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Linkedin" /></a> <br>
