--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="omipan.github.io/cv/opCV.pdf" target="_blank"><b>Download my CV</b></a> <br><br>
         <a href="https://github.com/omipan" > <img src="omipan.github.io/images/git_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Github" /></a>
         <a href="https://twitter.com/omirpan" > <img src="omipan.github.io/images/twitter_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Twitter" /></a>
-        <a href="https://gr.linkedin.com/in/opantazis" > <img src="omipan.github.io/images/linkedin_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Linkedin" /></a> <br>
+        <a href="https://gr.linkedin.com/in/opantazis" > <img src="omipan.github.io/images/linkedin_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Linkedin" /></a>
         <p align=center> <img src="omipan.github.io/images/gmail_icon.png" style="width:50px;height:50px;" align="center">  
             <a><b>o.pantazis@gmail.com </b></a> 
         </p><br><br>
