--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <li><b><i>Fascinated</i></b> by Machine Learning & Artificial Intelligence</li>
         <li><b><i>Plays</i></b> Water Polo</li>
         <li><b><i>Likes</i></b> Traveling & Snowboarding</li>
-      </ul>
+      </ul><br>
+      <a href="omipan.github.io/cv/opCV.pdf" target="_blank"><b>Download my CV</b></a> <br>
 
 
       <footer class="site-footer">
         <div align=center >
-        <a href="omipan.github.io/cv/opCV.pdf" target="_blank"><b>Download my CV</b></a> <br><br>
         <a href="https://github.com/omipan" > <img src="omipan.github.io/images/git_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Github" /></a>
         <a href="https://twitter.com/omirpan" > <img src="omipan.github.io/images/twitter_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Twitter" /></a>
         <a href="https://gr.linkedin.com/in/opantazis" > <img src="omipan.github.io/images/linkedin_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Linkedin" /></a>
