--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <li><b><i>Plays</i></b> Water Polo</li>
         <li><b><i>Likes</i></b> Traveling & Snowboarding</li>
       </ul><br>
-      <a href="omipan.github.io/cv/opCV.pdf" target="_blank"><b>Download my CV</b></a> <br>
-
+      <a href="omipan.github.io/cv/opCV.pdf" target="_blank" align=center ><b>Download my CV</b></a> <br>
 
       <footer class="site-footer">
         <div align=center >
