--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         <li><b><i>Plays</i></b> Water Polo</li>
         <li><b><i>Likes</i></b> Traveling & Snowboarding</li>
       </ul><br>
-      <a href="omipan.github.io/cv/opCV.pdf" target="_blank" align=center ><b>Download my CV</b></a> <br>
-
+      <div align=center>
+      <a href="omipan.github.io/cv/opCV.pdf" target="_blank"><b>Download my CV</b></a> 
+      </div><br>
+      
       <footer class="site-footer">
         <div align=center >
         <a href="https://github.com/omipan" > <img src="omipan.github.io/images/git_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Github" /></a>
