--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h2 class="project-tagline">ECE Grad @ NTUA</h2>
     </section>
 
-    <section class="main-content" style="font-family: 'Amatica SC', cursive;"> 
+    <section class="main-content" stylesheet="font-family: 'Amatica SC', cursive;"> 
         
       <ul>
         <li><b><i>Holds</i></b> Electrical & Computer Engineering diploma with major in Computer Science from National Technical University of Athens </li>
