--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href="https://fonts.googleapis.com/css?family=Amatica+SC" rel="stylesheet">
-  
+    <style>
+      body {
+        font-family: 'Amatica SC', cursive;
+        font-size: 48px;
+      }
+    </style>
+    </style>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
@@ -18,7 +24,7 @@
       <h2 class="project-tagline">ECE Grad @ NTUA</h2>
     </section>
 
-    <section class="main-content" stylesheet="font-family: 'Amatica SC', cursive;"> 
+    <section class="main-content" > 
         
       <ul>
         <li><b><i>Holds</i></b> Electrical & Computer Engineering diploma with major in Computer Science from National Technical University of Athens </li>
