--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       }
     </style>
     </style>
-    <!--<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen"> -->
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen"> 
   </head>
   <body>
     <section class="page-header">
