--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Amatica+SC" rel="stylesheet">
-    <style>
+    <!-- <style>
       body {
         font-family: 'Amatica SC', cursive;
         font-size: 48px;
       }
-    </style>
+    </style> -->
     </style>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen"> 
@@ -25,7 +25,8 @@
       <h2 class="project-tagline">ECE Grad @ NTUA</h2>
     </section>
 
-    <section class="main-content" > 
+    <section class="main-content" style="font-family: 'Amatica SC', cursive";
+        font-size: 48px;> 
         
       <ul>
         <li><b><i>Holds</i></b> Electrical & Computer Engineering diploma with major in Computer Science from National Technical University of Athens </li>
