--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Amatica+SC" rel="stylesheet">
+    <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
+    <link href="https://fonts.googleapis.com/css?family=Amatica+SC" rel="stylesheet" type='text/css'>
     <!-- <style>
       body {
         font-family: 'Amatica SC', cursive;
@@ -20,7 +20,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Omiros Pantazis lala</h1>
+      <h1 class="project-name">Omiros Pantazis</h1>
       <p><img src="omipan.github.io/images/om_circular.jpeg" style="width:164px;height:128px;  margin: 0 auto;" alt="omiros"></p>
       <h2 class="project-tagline">ECE Grad @ NTUA</h2>
     </section>
