--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
-    <link href="https://fonts.googleapis.com/css?family=Amatica+SC" rel="stylesheet" type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Amatica+SC:400,700" rel="stylesheet" type='text/css'>
     <!-- <style>
       body {
         font-family: 'Amatica SC', cursive;
