--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Amatica+SC" rel="stylesheet" font-size: 20px; type='text/css'> -->
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet" type='text/css'>
-    <!-- <style>
+    <style>
       body {
-        font-family: 'Amatica SC', cursive;
-        font-size: 48px;
+        font-family: 'Lora SC', serif;
+        font-size: 20px;
       }
-    </style> -->
+    </style> 
     </style>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen"> 
@@ -26,7 +26,7 @@
       <h2 class="project-tagline">ECE Grad @ NTUA</h2>
     </section>
 
-    <section class="main-content" style="font-family: 'Amatica SC', cursive";
+    <section class="main-content";
         font-size: 48px;> 
         
       <ul>
