--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
         font-family: 'Amatica SC', cursive;
         font-size: 24px;
       }
+      html {
+          text-align: center;
+        }
     </style> 
     </style>
-    <!-- <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen"> -->
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen"> 
   </head>
   <body>
