--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
     </style> 
     </style>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <!-- <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen"> -->
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen"> 
   </head>
   <body>
