--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>omipan.github.io</title>
-    
+  
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
-    <link href="https://fonts.googleapis.com/css?family=Amatica+SC" rel="stylesheet" font-size: 20px; type='text/css'>
-    
-    <style>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <!-- <link href="https://fonts.googleapis.com/css?family=Amatica+SC" rel="stylesheet" font-size: 20px; type='text/css'> -->
+<!--     <style>
       body {
         font-family: 'Amatica SC', cursive;
         font-size: 24px;
@@ -17,9 +16,8 @@
       html {
           text-align: center;
         }
-    </style> 
-    </style>
-    <!-- <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen"> -->
+    </style>  -->
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen"> 
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen"> 
   </head>
   <body>
