modified cv for ucl

--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
     <section class="page-header">
       <h1 class="project-name">Omiros Pantazis</h1>
       <p><img src="omipan.github.io/images/om_circular.jpeg" style="width:164px;height:128px;  margin: 0 auto;" alt="omiros"></p>
-      <h2 class="project-tagline">ECE Grad @ NTUA</h2>
+      <h2 class="project-tagline">MSc Student @ UCL</h2>
     </section>
 
     <section class="main-content";
         font-size: 48px;> 
         
       <ul>
-        <li><b><i>Holds</i></b> Electrical & Computer Engineering diploma with major in Computer Science from National Technical University of Athens </li>
+		<li><b><i>Studies</i></b> MSc Machine Learning at University College London (UCL) </li>
+        <li><b><i>Holds</i></b> Electrical & Computer Engineering Diploma with major in Computer Science from National Technical University of Athens </li>
+		<li><b><i>Lives</i></b> in London</li>
         <li><b><i>Fascinated</i></b> by Machine Learning & Artificial Intelligence</li>
         <li><b><i>Plays</i></b> Water Polo</li>
         <li><b><i>Likes</i></b> Traveling & Snowboarding</li>
