--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <footer class="site-footer">
         <div align=center >
         <a href="https://github.com/omipan" > <img src="omipan.github.io/images/git_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Github" /></a>
-        <a href="https://www.instagram.com/omipan10" > <img src="omipan.github.io/images/insta_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Instagram" /></a>
+        <a href="https://www.instagram.com/0m1pan" > <img src="omipan.github.io/images/insta_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Instagram" /></a>
         <a href="https://gr.linkedin.com/in/opantazis" > <img src="omipan.github.io/images/linkedin_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Linkedin" /></a>
         <p align=center> <img src="omipan.github.io/images/gmail_icon.png" style="width:50px;height:50px;" align="center">  
             <a><b>o.pantazis@gmail.com </b></a> 
