--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
         font-size: 48px;> 
         
       <ul>
-		<li><b><i>Studies</i></b> MSc Machine Learning at University College London (UCL) </li>
+		<li><b><i>Holds</i></b> MSc in Machine Learning from University College London (UCL) </li>
         <li><b><i>Holds</i></b> Electrical & Computer Engineering Diploma with major in Computer Science from National Technical University of Athens </li>
 		<li><b><i>Lives</i></b> in London</li>
-        <li><b><i>Fascinated</i></b> by Deep Learning & Artificial Intelligence</li>
         <li><b><i>Plays</i></b> Water Polo</li>
         <li><b><i>Likes</i></b> Traveling & Snowboarding</li>
       </ul><br>
