--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         font-size: 48px;> 
         
       <ul>
+    <li><b><i>Works</i></b> as a Data Scientist </li>
 		<li><b><i>Holds</i></b> MSc in Machine Learning from University College London (UCL) </li>
         <li><b><i>Holds</i></b> Electrical & Computer Engineering Diploma with major in Computer Science from National Technical University of Athens </li>
 		<li><b><i>Lives</i></b> in London</li>
