--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         font-size: 48px;> 
         
       <ul>
-    <li><b><i>Works</i></b> as a Data Scientist </li>
+    <li><b><i>Works</i></b> as a data scientist </li>
 		<li><b><i>Holds</i></b> MSc in Machine Learning from University College London (UCL) </li>
-        <li><b><i>Holds</i></b> Electrical & Computer Engineering Diploma with major in Computer Science from National Technical University of Athens </li>
+        <li><b><i>Holds</i></b> Electrical & Computer Engineering diploma with major in Computer Science from National Technical University of Athens </li>
 		<li><b><i>Lives</i></b> in London</li>
-        <li><b><i>Plays</i></b> Water Polo</li>
-        <li><b><i>Likes</i></b> Traveling & Snowboarding</li>
+        <li><b><i>Plays</i></b> water polo</li>
+        <li><b><i>Loves</i></b> traveling, snowboarding and good music</li>
       </ul><br>
       <div align=center>
       <a href="omipan.github.io/cv/opCV.pdf" target="_blank"><b>Download my CV</b></a> 
