--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li><b><i>Loves</i></b> traveling, snowboarding and good music</li>
       </ul><br>
       <div align=center>
-      <a href="omipan.github.io/cv/opCV.pdf" target="_blank"><b>Download my CV</b></a> 
+      <a href="omipan.github.io/cv/" target="_blank"><b>Take a look at CV</b></a> 
       </div><br>
       
       <footer class="site-footer">
