--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Omiros Pantazis</h1>
-      <p><img src="omipan.github.io/images/om_circular.jpeg" style="width:164px;height:128px;  margin: 0 auto;" alt="omiros"></p>
+      <p><img src="omipan.github.io/images/om_circular.jpg" style="width:164px;height:128px;  margin: 0 auto;" alt="omiros"></p>
       <h2 class="project-tagline">Machine Learning Engineer</h2>
     </section>
 
@@ -38,14 +38,12 @@
         <li><b><i>Plays</i></b> water polo</li>
         <li><b><i>Loves</i></b> traveling, snowboarding and good music</li>
       </ul><br>
-      <div align=center>
-      <a href="omipan.github.io/cv/omi_cv.pdf" target="_blank"><b>Take a look at CV</b></a> 
-      </div><br>
       
+   
       <footer class="site-footer">
         <div align=center >
         <a href="https://github.com/omipan" > <img src="omipan.github.io/images/git_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Github" /></a>
-        <a href="https://www.instagram.com/0m1pan" > <img src="omipan.github.io/images/insta_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Instagram" /></a>
+        <a href="https://www.twitter.com/panom1" > <img src="omipan.github.io/images/" style="width:64px;height:64px;  margin: 0 auto;" alt="Twitter" /></a>
         <a href="https://gr.linkedin.com/in/opantazis" > <img src="omipan.github.io/images/linkedin_icon.png" style="width:64px;height:64px;  margin: 0 auto;" alt="Linkedin" /></a>
         <p align=center> <img src="omipan.github.io/images/gmail_icon.png" style="width:50px;height:50px;" align="center">  
             <a><b>o.pantazis@gmail.com </b></a> 
