--- a/coolStuff.html
+++ b/coolStuff.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Cool stuff</h1>
-						<p>I guess I will have some cool stuff here, maybe even some articles</p>
+						<p>I guess I will add some cool stuff here at some point</p>
 					</header>
 
 				<!-- Main -->
@@ -39,11 +39,11 @@
 								-->
 					</div>  
    				
-								<!-- Footer -->
+					<!-- Footer -->
 					<footer id="footer">
 						<section>
 							<h2>General Notes</h2>
-							<p>I will try to update this website as often as I can. Cheers, Chris</p>
+							<p>Website may not be updated regularly</p>
 							
 						</section>
 						<section>
@@ -54,16 +54,16 @@
 								<dt>Phone</dt>
 								<dd>(000) 000-0000 x 0000</dd>-->
 								<dt>Email</dt>
-								<dd><a href="mailto:chris.mitropoulos+www@gmail.com">chris.mitropoulos+www@gmail.com</a></dd>
+								<dd><a href="mailto:o.pantazis@gmail.com">o.pantazis at gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="https://www.twitter.com/ortimitro" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="https://github.com/CMitropoulos" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/christosmitropoulos/" class="icon fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.twitter.com/panom1" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
+								<li><a href="https://github.com/omipan" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/opantazis/" class="icon fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 
 							</ul>
 						</section>
-						<p class="copyright">&copy; Christos Mitropoulos. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Omiros Pantazis. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
