--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<span class="logo"><img src="images/tree.jpg" alt="" /></span>
 						<h1>Omiros Pantazis</h1>
-						<p>Welcome to my personal website<br />
+						<p>Welcome to my personal webspace<br />
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
 							<li><a href="#bio" class="active">Bio</a></li>
-							<li><a href="#Research">Research++</a></li>
-							<li><a href="#Projects">Projects</a></li>
+							<li><a href="#other">Other++</a></li>
+							<li><a href="#footer">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -56,15 +56,15 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="Research" class="main special">
+							<section id="other" class="main special">
 								<header class="major">
-									<h2>Research++</h2>
+									<h2>Other</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon major style1 fa-code"></span>
 										<h3>><a href="codeStuff.html"> Code </a></h3>
-										<p>These are some Code Projects I have been working on</p>
+										<p>These are some Projects I have been working on</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
