--- a/paperStuff.html
+++ b/paperStuff.html
@@ -22,25 +22,25 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Research Papers</h1>
-						<p>These are some papers that I have worked on</p>
+						<p>This space will host stuff I have been working on</p>
 					</header>
 
 				<!-- Main -->
-					<div id="main">
+					<!-- <div id="main"> -->
 
 						<!-- Content -->
-							<section id="content" class="main">
-								<!--<span class="image main"><img src="images/pic04.jpg" alt="" /></span> -->
-	<!-- 							<h4>Xianyi Gao, Yulong Yang, Can Liu, <strong>Christos Mitropoulos</strong>, Oulasvirta Antti, Janne Lindqvist. ”Forgetting of Passwords: Ecological Theory and Data”</h4>
-								<p>(To appear) In Proceedings of the conference on USENIX Security Symposium (USENIX'18), 2018
-</p>
-								  -->
-								<!--
-								<h2>Tempus veroeros</h2>
-								<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
-							</section>
-								-->
-					</div>  
+				<!--			<section id="content" class="main">
+								<span class="image main"><img src="images/pic04.jpg" alt="" /></span> -->
+					<!-- 							<h4>Xianyi Gao, Yulong Yang, Can Liu, <strong>Christos Mitropoulos</strong>, Oulasvirta Antti, Janne Lindqvist. ”Forgetting of Passwords: Ecological Theory and Data”</h4>
+												<p>(To appear) In Proceedings of the conference on USENIX Security Symposium (USENIX'18), 2018
+				</p>
+												  -->
+												<!--
+												<h2>Tempus veroeros</h2>
+												<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+											</section>
+												-->
+					<!-- </div>  --> 
 					<!-- Footer -->
 					<footer id="footer">
 						<section>
@@ -69,7 +69,6 @@
 					</footer>
 
 			</div>
-
 
 
 			</div>
