new version of personal site ready

--- a/coolStuff.html
+++ b/coolStuff.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Cool stuff</h1>
-						<p>I guess I will add some cool stuff here at some point</p>
+						<p>I guess I will add some cool stuff here at some point. It's not that nothing cool has happened, but probably it chose the offline life. </p>
 					</header>
 
 				<!-- Main -->
