new version of personal site ready

--- a/projectStuff.html
+++ b/projectStuff.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Projects</h1>
-						<p>This space will host stuff that I have been working on</p>
+						<p>This space will host stuff that I am working on</p>
 					</header>
 
 				<!-- Main -->
@@ -54,28 +54,12 @@
    				
 					<!-- Footer -->
 					<footer id="footer">
-						<section>
+				<!-- 		<section>
 							<h2>General Notes</h2>
 							<p>Website may not be updated regularly</p>
 							
 						</section>
-						<section>
-							<h2>Contact Info</h2>
-							<dl class="alt">
-								<!--<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>-->
-								<dt>Email</dt>
-								<dd><a href="mailto:o.pantazis@gmail.com">o.pantazis at gmail.com</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="https://www.twitter.com/panom1" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="https://github.com/omipan" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/opantazis/" class="icon fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
-
-							</ul>
-						</section>
+	
 						<p class="copyright">&copy; Omiros Pantazis. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
