new version of personal site ready

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										</header>
 										<p>I am Omi, a machine learning scientist. Currently doing a PhD at UCL.</p>
 										<ul class="actions">
-											<li><a href="#bio" class="button">Learn More</a></li>
+											<li><a href="bio.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/me.jpg" alt="geia" /></span>
