added spotify list widget to cool stuff page

--- a/coolStuff.html
+++ b/coolStuff.html
@@ -22,8 +22,19 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Cool stuff</h1>
-						<p>I guess I will add some cool stuff here at some point. It's not that nothing cool has ever happened, but probably it chose the offline life. </p>
+						<p>Here I will be adding every now and then some stuff I consider cool. If this page is not updated regularly, it does not mean that nothing cool ever happens, but probably that it chooses the offline life. </p>
 					</header>
+
+					<header class="major">
+					<h2>Spotify - "Take it Easy"</h2>
+					</header>
+					<p">A playlist I maintain on Spotify. If it needs to belong somewhere, that is probably in the spectrum between rock and blues.</p>
+					<p align="center">
+					</p>
+					<br>
+					<iframe src="https://open.spotify.com/embed/playlist/1WAPnr2srwgZCUy5U4oNEZ" width="600" height="580" frameborder="0" allowtransparency="true" allow="encrypted-media">
+					</iframe>
+					</p>
 
 				<!-- Main -->
 					<!-- <div id="main"> -->
