Added Samsung GPI paper

--- a/paperStuff.html
+++ b/paperStuff.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Research Papers</title>
+		<title>Papers</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -26,29 +26,28 @@
 					</header>
 
 				<!-- Main -->
-					<!-- <div id="main"> -->
+					<div id="main">
 
 						<!-- Content -->
-				<!--			<section id="content" class="main">
-								<span class="image main"><img src="images/pic04.jpg" alt="" /></span> -->
-					<!-- 							<h4>Xianyi Gao, Yulong Yang, Can Liu, <strong>Christos Mitropoulos</strong>, Oulasvirta Antti, Janne Lindqvist. ”Forgetting of Passwords: Ecological Theory and Data”</h4>
-												<p>(To appear) In Proceedings of the conference on USENIX Security Symposium (USENIX'18), 2018
-				</p>
-												  -->
+							<section id="content" class="main">
+
+									<h4>"The Game Performance Index for Mobile Phones" </h4>
+									<p>Hesham Dar, James Kwan, Yang Liu, <strong>Omiros Pantazis</strong>, Robert Sharp (Samsung Research UK)<a href="https://arxiv.org/abs/1910.13872"> [arXiv link] </p>
+						</div>
 												<!--
 												<h2>Tempus veroeros</h2>
 												<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
 											</section>
-												-->
-					<!-- </div>  --> 
+
+
 					<!-- Footer -->
 					<footer id="footer">
 	<!-- 					<section>
 							<h2>General Notes</h2>
 							<p>Website may not be updated regularly</p>
-							
+
 						</section> -->
-						
+
 						<p class="copyright">&copy; Omiros Pantazis. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
