--- a/paperStuff.html
+++ b/paperStuff.html
@@ -21,8 +21,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Research Papers</h1>
-						<p>This space will host stuff I am working on</p>
+						<h1>Papers</h1>
+						<p>This space will host stuff I have worked on</p>
 					</header>
 
 				<!-- Main -->
