updated iccv21 paper

--- a/paperStuff.html
+++ b/paperStuff.html
@@ -31,7 +31,7 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<h4>"Focus on the Positives: Self-Supervised Learning for Biodiversity Monitoring" - ICCV 2021</h4>
-								<p><strong>Omiros Pantazis</strong>, Gabriel Brostow, Kate Jones, Oisin Mac Aodha <a href="coming soon"> </p>
+								<p><strong>Omiros Pantazis</strong>, Gabriel Brostow, Kate Jones, Oisin Mac Aodha </p>
 									
 								
 								<h4>"The Game Performance Index for Mobile Phones" - arXiv 2020</h4>	
