updated iccv21 paper and projects page

--- a/coolStuff.html
+++ b/coolStuff.html
@@ -52,6 +52,8 @@
    				
 					<!-- Footer -->
 					<footer id="footer">
+						<p class="copyright">&copy; Omiros Pantazis. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+					</footer>
 				<!-- 		<section>
 							<h2>General Notes</h2>
 							<p>Website may not be updated regularly</p>
