--- a/paperStuff.html
+++ b/paperStuff.html
@@ -45,14 +45,14 @@
 											</section>
 
 
-					<!-- Footer -->
+				
 					<footer id="footer">
-	<!-- 					<section>
+						<section>
 							<h2>General Notes</h2>
 							<p>Website may not be updated regularly</p>
 
 						</section> -->
-
+					<footer id="footer">
 						<p class="copyright">&copy; Omiros Pantazis. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
