updated iccv21 paper and projects page

--- a/projectStuff.html
+++ b/projectStuff.html
@@ -37,7 +37,7 @@
 							<hr>
 
 							<h4><strong>Biome Health Project - UCL/WWF</strong></h4>	
-							<p>Measuring the impact of anthropogenic pressure in biodiversity loss across biomes of strong ecological interest<a href="https://www.biomehealthproject.com/">  </p>
+							<p>Measuring the impact of anthropogenic pressure in biodiversity loss across biomes of strong ecological interest<a href="https://www.biomehealthproject.com/">[biome health project site]</a>  </p>
 							
 				</div>
    				
