--- a/paperStuff.html
+++ b/paperStuff.html
@@ -31,7 +31,7 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<h4><strong>Focus on the Positives: Self-Supervised Learning for Biodiversity Monitoring</strong></h4>
-								<p><strong>Omiros Pantazis</strong>, Gabriel Brostow, Kate Jones, Oisin Mac Aodha <br> ICCV 2021</p>
+								<p><strong>Omiros Pantazis</strong>, Gabriel Brostow, Kate Jones, Oisin Mac Aodha <br> ICCV 2021 <a href="https://arxiv.org/abs/2108.06435"> [paper] </a> <a href="https://github.com/omipan/camera_traps_self_supervised/"> [code] </a></p>
 									
 								<hr>
 
