--- a/paperStuff.html
+++ b/paperStuff.html
@@ -36,7 +36,7 @@
 								<hr>
 
 								<h4><strong>The Game Performance Index for Mobile Phones</strong></h4>	
-								<p>Hesham Dar, James Kwan, Yang Liu, <strong>Omiros Pantazis</strong>, Robert Sharp (Samsung Research UK) <br> arXiv 2020<a href="https://arxiv.org/abs/1910.13872"> [arXiv link]</a>  </p>
+								<p>Hesham Dar, James Kwan, Yang Liu, <strong>Omiros Pantazis</strong>, Robert Sharp (Samsung Research UK) <br> arXiv 2020<a href="https://arxiv.org/abs/1910.13872"> [paper]</a>  </p>
 							
 					</div>
 												<!--
