updated list of published papers

--- a/coolStuff.html
+++ b/coolStuff.html
@@ -27,7 +27,7 @@
 					</header>
 
 					<header class="major">
-					<h2>Spotify - "Take it Easy"</h2>
+					<h2>Spotify - "One Hundred Songs of Solitude"</h2>
 					</header>
 					<p">A playlist I maintain on Spotify. If it needs to belong somewhere, that is probably in the spectrum between rock and blues.</p>
 					<p align="center">
