added arxiv link to new bmvc paper

--- a/paperStuff.html
+++ b/paperStuff.html
@@ -32,7 +32,7 @@
 							<section id="content" class="main">
 								
 								<h4><strong>SVL-Adapter: Self-Supervised Adapter for Vision-Language Pretrained Models</strong></h4>
-								<p><strong>Omiros Pantazis</strong>, Gabriel Brostow, Kate Jones, Oisin Mac Aodha <br> BMVC 2022 [link to paper coming soon] </p>
+								<p><strong>Omiros Pantazis</strong>, Gabriel Brostow, Kate Jones, Oisin Mac Aodha <br> BMVC 2022  <a href="https://arxiv.org/abs/2210.03794"> [paper] </a> </p>
 								
 								<hr>
 
