--- a/projectStuff.html
+++ b/projectStuff.html
@@ -5,6 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<a href="index.html"class="btn btn-lg btn-success">Home</a>
 	<head>
 		<title>Projects</title>
 		<meta charset="utf-8" />
