--- a/projectStuff.html
+++ b/projectStuff.html
@@ -5,7 +5,9 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<a href="index.html"class="btn btn-lg btn-success">Home</a>
+	<body style="padding:0px; margin:0px; overflow:hidden;"> 
+	<a href="index.html"class="btn btn-lg btn-success"><span>&#8592;</span></a>
+	</body>
 	<head>
 		<title>Projects</title>
 		<meta charset="utf-8" />
