--- a/projectStuff.html
+++ b/projectStuff.html
@@ -5,9 +5,9 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<body style="padding:0px; margin:0px; overflow:hidden;"> 
-	<a href="index.html"class="btn btn-lg btn-success"><span>&#8592;</span></a>
-	</body>
+	<!-- <body style="padding:0px; margin:0px; overflow:hidden;"> 
+	
+	</body> -->
 	<head>
 		<title>Projects</title>
 		<meta charset="utf-8" />
@@ -21,7 +21,7 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
+				<a href="index.html"class="btn btn-lg btn-success"><span>&#8592;</span></a>
 				<!-- Header -->
 					<header id="header">
 						<h1>Projects</h1>
