added all home buttons

--- a/coolStuff.html
+++ b/coolStuff.html
@@ -19,7 +19,7 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
+				<a href="index.html"class="btn btn-lg btn-success"><span>&#8592;</span></a>
 				<!-- Header -->
 					<header id="header">
 						<h1>Cool stuff</h1>
