--- a/paperStuff.html
+++ b/paperStuff.html
@@ -18,7 +18,7 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
+				<a href="index.html"class="btn btn-lg btn-success"><span>&#8592;</span></a>
 				<!-- Header -->
 					<header id="header">
 						<h1>Papers</h1>
