added g scholar link

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 								<li><a href="https://www.twitter.com/panom1" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
 								<li><a href="https://github.com/omipan" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/opantazis/" class="icon fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
+                                                                <li><a href="https://scholar.google.com/citations?user=1-A7q8kAAAAJ" class="icon fa-scholar alt"><span class="label">Google Scholar</span></a></li>
+
 
 							</ul>
 						</section>
